Fixed <br> for firefox

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</div>  
 
 				
-				<br/>
+				<div class = "break"></div>
 
 				<div onclick = "moveleft('wordle')" id = "wordle" class = "list-item">
 					<span class = "list-text">
@@ -82,8 +82,8 @@
 					</span>
 				</div>  
 
+				<div class = "break"></div>
 
-				<br/>
 
 				<div onclick = "moveleft('toptrumps')" id = "toptrumps" class = "list-item">
 					<span class = "list-text">
