Added images at the side

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 		
 		</div>
 
-		<div class = "right_page">
+		<div class = "right_page" id = "right_page">
 			<div id = "pic_title" class = "pic_title list-desc">Wordle</div>
-			<img src = "pics/wordle.png" id = "wordle_img"/>
-			<img src="pics/toptrumps.png" id = "toptrumps_img"/>
+			<img src = "pics/wordle.png" id = "wordle"/>
+			<img src="pics/toptrumps.png" id = "toptrumps"/>
 		</div>	
 			
 		<script src="js/script.js"></script>
