Replaced the alphabet with a keyboard

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 						Wordle
 					</span>
 					<div class="languages">
-						<span style = "color: lightblue" class = "language">	
-							Python&nbsp;
+						<span style = "color: yellow" class = "language">
+							Javascript&nbsp;
 						</span>
 					</div>
 					<br/>
@@ -97,5 +97,6 @@
 			
 		<script src="js/script.js"></script>
 		<script src="js/wordle/wordle.js"></script>	
+		<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 	</body>
 </html>
