Added on-screen backspace and enter keys

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
 			</div>
 		</div>
 
+
 		<div class = "right_page" id = "right_page">
+			<div class = "back" onclick="unmove()">Back</div>
+			<div class = "wordle_content" id = "wordle_content"/>
 		</div>	
 			
 		<script src="js/script.js"></script>
