removed on click for all except wordle

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</div>
 			</div>
 			<div class = "portfolio" id = "portfolio">
-				<div onclick = "moveleft('website')" id = "website_a" class = "list-item">
+				<div id = "website_a" class = "list-item">
 					<span class = "list-text">
 						This website
 					</span>
@@ -66,7 +66,7 @@
 					</span>
 				</div>  
 				<div class = "break"></div>
-				<div onclick = "moveleft('toptrumps')" id = "toptrumps" class = "list-item">
+				<div id = "toptrumps" class = "list-item">
 					<span class = "list-text">
 						Top Trumps
 					</span>
