Moved back button for easier mobile

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
 		<div class = "buttons">
 			<div class="button_margin" id="button_margin">
+				<div class = "back" id = "back" onclick="unmove()">Back</div>
 				<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button"><img class="button-image" src="pics/email.png"><!--
 				--></a>
 				<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button" onload="last_button_load()"><img class="button-image" src="pics/github.png"><!--
@@ -94,7 +95,6 @@
 
 
 		<div class = "right_page" id = "right_page">
-			<div class = "back" onclick="unmove()">Back</div>
 			<div class = "wordle_content" id = "wordle_content"/>
 		</div>	
 			
