--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<div class = "wordle_content" id = "wordle_content"/>
 		</div>	
 			
-		<script onload="(function(){setTimeout(checkParams(), 200)})" src="js/script.js"></script>
+		<script src="js/script.js"></script>
 		<script src="js/wordle/wordle.js"></script>	
 		<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 	</body>
