Added a new word, changed the wordle text to be cleaner

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class = "break"></div>
 				<div onclick = "downloadfile(this)" data-link="https://github.com/Lem0naise/wordle" data-download ='https://github.com/Lem0naise/wordle/archive/refs/heads/main.zip' id = "wordle" class = "list-item">
 					<span class = "list-text">
-						Wordle in shell
+						Wordle
 					</span>
 					<div class="languages">
 						<span style = "color: cyan" class = "language">
