Added framework for scrolling mechanic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<meta name="author" content="Zac Nolan"/>
 	</head>
 	
-	<body>
+	<body onload="ready()">
 		<div class = "page" id = "left_page">
 			<div class = 'back_image'>
 				<img id="back-image" src = "pics/background.webp" onload = "background_load()" >
@@ -37,6 +37,12 @@
 					<img id = "wordle1" src = "pics/wordle.webP">
 					<div id="wordle_text">Wordle in your terminal</div>
 					<img id="wordle2" src = "pics/wordleweb.webp">
+				</div>
+			</div>
+			<div class = "sticky_container">
+				<div id = "top_trumps" class = "sticky">
+					<img id = "toptrumps" src = "pics/toptrumps.webP">
+					<div id="toptrumps_text">Top Trumps</div>
 				</div>
 			</div>
 			
