Completed framework for scrolling

--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
 					Student and passionate coder from the UK
 				</div>
 			</div>
+			<div class = 'label-text'>Wordle
+				<div class = 'label-desc'>The popular word game playable in your terminal</div></div>
+			<div class = 'label-text'>Top Trumps
+				<div class = 'label-desc'>Playable in your terminal against a bot</div></div>
 			<div class = "sticky_container">
 				<div id = "wordle" class = "sticky">
-					<img id = "wordle1" src = "pics/wordle.webP">
-					<div id="wordle_text">Wordle in your terminal</div>
-					<img id="wordle2" src = "pics/wordleweb.webp">
+					<img src = "pics/wordle.webP">
 				</div>
 			</div>
 			<div class = "sticky_container">
 				<div id = "top_trumps" class = "sticky">
-					<img id = "toptrumps" src = "pics/toptrumps.webP">
-					<div id="toptrumps_text">Top Trumps</div>
+					<img src = "pics/toptrumps.webP">
 				</div>
 			</div>
 			
