Adjusted movement, added languages

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 				</div>
 			</div>
 			<div class = 'label-text'>Wordle
-				<div class = 'label-desc'>The popular word game playable in your terminal</div></div>
+				<div class = 'label-desc'>The popular word game playable in your terminal</div>
+				<div class = 'label-langs' style="color:cornflowerblue">Python</div>
+			</div>
 			<div class = 'label-text'>Top Trumps
-				<div class = 'label-desc'>Playable in your terminal against a bot</div></div>
+				<div class = 'label-desc'>Playable in your terminal against a bot</div>
+				<div class = 'label-langs' style="color:cornflowerblue">Python</div>
+			</div>
 			<div class = "sticky_container">
 				<div id = "wordle" class = "sticky">
 					<img src = "pics/wordle.webP">
