Added some menu buttons (not working yet)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 			</div>
 			
 		</div>
-			
+		<div class = "buttons">
+			<div class = "menu_button">GitHub</div>
+			<div class = "menu_button">Email</div>
+		</div>
 		<script src="js/wordle/wordle.js"></script>	
 		<script src="js/script.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
