Added extended bio

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					Student and passionate coder from the UK
 				</div>
 			</div>
+			<div class = 'label-text'></div>
 			<div class = 'label-text'>Wordle
 				<div class = 'label-desc'>The popular word game playable in your terminal</div>
 				<div class = 'label-langs' style="color:cornflowerblue">Python</div>
@@ -39,6 +40,18 @@
 			<div class = 'label-text'>Top Trumps
 				<div class = 'label-desc'>Playable in your terminal against a bot</div>
 				<div class = 'label-langs' style="color:cornflowerblue">Python</div>
+			</div>
+			<div class = "sticky_container">
+				<div id = "extendedbio" class = "sticky">
+					<div class = 'font que'>Who am I?</div>
+					<div class = "font ans">I'm an A-Level student living in London.</div>
+					<div class = 'font que'><br/>What are my interests?</div>
+					<div class = "font ans">I love programming, but I also do photography and creative writing in my free time.</div>
+					<div class = 'font que'><br/>What are my goals?</div>
+					<div class = "font ans">I hope to work in software engineering or data analysis.</div>
+					<div class = 'font que'><br/>What have I made?</div>
+					<div class = "font ans">Scroll down to view some of my projects.</div>
+				</div>
 			</div>
 			<div class = "sticky_container">
 				<div id = "wordle" class = "sticky">
