Made buttons functional

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			
 		</div>
 		<div class = "buttons">
-			<div class = "menu_button">GitHub</div>
-			<div class = "menu_button">Email</div>
+			<div class = "menu_button"><a class = "link" href = "https://github.com/Lem0naise" target="_blank">GitHub</a></div>
+			<div class = "menu_button"><a class = "link" href = "mailto:zac.i.nolan@gmail.com">Email</a></div>
 		</div>
 		<script src="js/wordle/wordle.js"></script>	
 		<script src="js/script.js"></script>
