Added download buttons, also added euler constant calculation

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 			<div class = 'label-text'></div>
 			<div class = 'label-text'>Wordle
 				<div class = 'label-desc'>The popular word game playable in your terminal</div>
-				<div class = 'label-langs' style="color:cornflowerblue">Python</div>
+				<a class = 'label-link' href = 'https://github.com/Lem0naise/wordle/archive/refs/heads/main.zip'>Download</a>
 			</div>
 			<div class = 'label-text'>Top Trumps
 				<div class = 'label-desc'>Playable in your terminal against a bot</div>
-				<div class = 'label-langs' style="color:cornflowerblue">Python</div>
+				<a class = 'label-link' href = 'https://github.com/Lem0naise/top-trumps/archive/refs/heads/main.zip'>Download</a>
+			</div>
+			<div class = 'label-text'>Euler-Mascheroni Constant
+				<div class = 'label-desc'>Function in Python using converging series</div>
 			</div>
 			<div class = "sticky_container">
 				<div id = "extendedbio" class = "sticky">
@@ -48,7 +51,7 @@
 					<div class = 'font que'><br/>What are my interests?</div>
 					<div class = "font ans">I love programming, but I also do photography and creative writing in my free time.</div>
 					<div class = 'font que'><br/>What are my goals?</div>
-					<div class = "font ans">I hope to work in software engineering or data analysis.</div>
+					<div class = "font ans">I hope to work in the software engineering or data analysis fields.</div>
 					<div class = 'font que'><br/>What have I made?</div>
 					<div class = "font ans">Scroll down to view some of my projects.</div>
 				</div>
@@ -61,6 +64,11 @@
 			<div class = "sticky_container">
 				<div id = "top_trumps" class = "sticky">
 					<img src = "pics/toptrumps.webP">
+				</div>
+			</div>
+			<div class = "sticky_container">
+				<div id = "euler" class = "sticky">
+					<img src = "pics/euler.webP">
 				</div>
 			</div>
 			
