--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 				<a class = 'label-link' href = 'https://github.com/Lem0naise/wordle/archive/refs/heads/main.zip'>Download</a>
 			</div>
 			<div class = 'label-text'>Euler-Mascheroni Constant
-				<div class = 'label-desc'>Function in Python using converging series</div>
+				<div class = 'label-desc'>Calculation in Python using converging series</div>
+			</div>
+			<div class = 'label-text'>Fantasteroids
+				<div class = 'label-desc'>A fully fledged video game based on the classic 1979 arcade game</div>
 			</div>
 			<div class = "sticky_container">
 				<div id = "extendedbio" class = "sticky">
@@ -60,6 +63,11 @@
 			<div class = "sticky_container">
 				<div id = "euler" class = "sticky">
 					<img src = "pics/euler.webP">
+				</div>
+			</div>
+			<div class = "sticky_container">
+				<div id = "fant" class = "sticky">
+					<img src = "pics/fantasteroids.webp" style="width:40vw">
 				</div>
 			</div>
 			
