--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 			</div>
 			<div class = "sticky_container">
 				<div id = "wordle" class = "sticky">
-					<img src = "pics/wordle.webP">
+					<img src = "pics/wordle.webp">
 				</div>
 			</div>
 			<div class = "sticky_container">
 				<div id = "euler" class = "sticky">
-					<img src = "pics/euler.webP">
+					<img src = "pics/euler.webp">
 				</div>
 			</div>
 			<div class = "sticky_container">
