--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
     </head>
 
     <body>
-
-        <div class="door"></div>
-        <div class = "circle_text">
-            <a href="index.html">404</a>
-
+        <div class = 'back_image'>
+            <img id="back-image" src = "pics/background.webp" >
+        </div>
+        <div class="text">
+            Hmmm, that URL isn't valid. <a href = "https://www.zacnolan.com">Go home?</a> 
         </div>
     </body>
 </html>
