Added menu buttons

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 			
 		</div>
 		<div class = "buttons">
-			<div class = "menu_button"><a class = "link" href = "https://github.com/Lem0naise" target="_blank">GitHub</a></div>
-			<div class = "menu_button"><a class = "link" href = "mailto:zac.i.nolan@gmail.com">Email</a></div>
+			<a style="background-image: url('pics/github.webp')" class = "menu_button" href = "https://github.com/Lem0naise" target="_blank">
+			<a style="background-image: url('pics/email.webp')"class = "menu_button" href = "mailto:zac.i.nolan@gmail.com"></a>
 		</div>
 		<script src="js/wordle/wordle.js"></script>	
 		<script src="js/script.js"></script>
