Removed obselete reference to ready() function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<meta name="author" content="Zac Nolan"/>
 	</head>
 	
-	<body onload="ready()">
+	<body>
 		<div class = 'back_image'>
 			<img id="back-image" src = "pics/background.webp" onload = "background_load()" >
 		</div>
