Cleaned up, centered fantasteroids image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<img src = "pics/wordle.webp">
 						<div class = "font item">
 							<p class = "title">Wordle</p>
-							<p class = "desc">The popular word game playable in your terminal.<br/><br/>
+							<p class = "desc">The popular word game, written in Python and playable in your terminal.<br/><br/>
 								<a class = "link" href = 'https://github.com/Lem0naise/wordle/archive/refs/heads/main.zip'>Download now</a>
 							</p>	
 						</div>
@@ -72,11 +72,13 @@
 						<img src = "pics/fantasteroids.webp">
 						<div class = "font item">
 							<p class = "title">Fantasteroids</p>
-							<p class = "desc">A fully-fledged video game based on the 1979 arcade classic.<br/><br/>
+							<p class = "desc">A fully-fledged video game written in C++, based on the 1979 arcade classic.<br/><br/>
 								<a class = "link">On Steam soon!</a>
 							</p>
 						</div>
+
 					</div>
+
 
 				</div>
 			</div>
