--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<div class = "font item">
 							<p class = "title">Fantasteroids</p>
 							<p class = "desc">A fully-fledged video game written in C++, based on the 1979 arcade classic.<br/><br/>
-								<a class = "link">On Steam soon!</a>
+								<a href = "https://store.steampowered.com/app/1790870/Fantasteroids/" target="_blank" class = "link">On Steam!</a>
 							</p>
 						</div>
 
