Added accesibility changes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<img src = "pics/fantasteroids.webp">
 						<div class = "font item">
 							<p class = "title">Fantasteroids</p>
-							<p class = "desc">A fully-fledged video game written in C++, based on the 1979 arcade classic.<br/><br/>
+							<p class = "desc">A fully-fledged video game written in C++.<br/><br/>
 								<a href = "https://store.steampowered.com/app/1790870/Fantasteroids/" target="_blank" class = "link">On Steam!</a>
 							</p>
 						</div>
