edited some bio text

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
 				<img onclick="github()" src="imgs/ghub.webp">
 				<p onclick="github()" id = "name">Hi, I'm Zac Nolan.</p>
-				<p>I'm a student passionate about programming.</p>
-				<p>I primarily use Python, though I also am proficient in C++, Javascript, Java and other languages.</p>
+				<p>My experience is mostly in web development with Javascript and data analysis with Python, though I also am proficient in C++, Java and some other languages.</p>
 				<p>Have a look at some of my projects on the right!</p>
 				
 				<p id = "c_title">Contact Me</p>
