--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Zac Nolan</title>
 		<link rel="stylesheet" href = "stylesheet.css">
-		<script src="js/jquery-3.6.0.min.js"></script>
 		<meta name="description" content="Zac Nolan - Portfolio containing work experience and contact details"/>
 		<meta name="keywords" content="Zac Nolan, Zac, Nolan, Portfolio"/>
 		<meta name="author" content="Zac Nolan"/>
 	</head>
 	
-	<body onload = "ready()">
+	<body>
 		<div class = "container">
 
 			<div class = "bio">
