--- a/wordle/index.html
+++ b/wordle/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Colour Palette Generator</title>
+		<title>Unlimited Wordle</title>
 		<link rel="stylesheet" href = "stylesheet.css">
-		<meta name="description" content="Colour Palette Generator"/>
-		<meta name="keywords" content="Zac Nolan, Colour Palette"/>
+		<meta name="description" content="Wordle"/>
+		<meta name="keywords" content="Zac Nolan, Wordle"/>
 		<meta name="author" content="Zac Nolan"/>
 	</head>
 	
 	<body>
 
-		<button onclick="generate()" id = "gen_button" class = "button">Generate</button>
+		<button onclick="new_game()" id = "new_button" class = "button">New Game</button>
 		<button onclick="home()" id = "home_button" class = "button">Home</button>
-		<div id = "palette">
-			<!-- dynamically generated columns -->
-		</div>
+		<div id = "guesses"><!-- dynamically generated rows --></div>
+		<div id = "keyboard"><!-- dynamically generated letters --></div>
 
 	</body>
-	<script src = "palette.js"></script>
+	<script src = "wordle.js"></script>
 </html>
