added hamburger icon

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 	</head>
 	
 	<body>
+		<div class = "menu">
+			<img onclick="github()" src="imgs/hmenu.webp">
+		</div>
 		<div class = "container">
-
 			<div class = "bio">
 
-				<img onclick="github()" src="imgs/ghub.webp">
-				<p onclick="github()" id = "name">Hi, I'm Zac Nolan.</p>
+				<p onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Zac Nolan.</p>
 				<p>My experience is mostly in web development with Javascript and data analysis with Python, though I also am proficient in C++, Java and some other languages.</p>
 				<p>Have a look at some of my projects on the right!</p>
 				
