populated burger menu

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 	</head>
 	
 	<body>
-		<div class = "menu">
-			<img onclick="github()" src="imgs/hmenu.webp">
+		<div id = "menu">
+			<img id="hmenu" onclick="hmenu()" src="imgs/hmenu.webp">
+		</div>
+		<div id = "fullmenu">
+			<a href = "/.">PROJECTS</a>
+			<a href = "/.">ABOUT ME</a>
 		</div>
 		<div class = "container">
 			<div class = "bio">
