Added about me paragraph

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 		</div>
 		<div id = "fullmenu">
 			<a href = "/.">PROJECTS</a>
-			<a href = "/.">ABOUT ME</a>
+			<a href = "/aboutme/">ABOUT ME</a>
 		</div>
+		
 		<div class = "container">
 			<div class = "bio">
 
