--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class = "bio">
 
 				<p onclick="github()" id = "name"><img onclick="github()" src="imgs/ghub.webp">Hi, I'm Zac Nolan.</p>
-				<p>My experience is mostly in web development with Javascript and data analysis with Python, though I also am proficient in C++, Java and some other languages.</p>
+				<p>My experience is mostly in web development with Javascript and data analysis with Python, though I have also had experience in C++, Java and some other languages.</p>
 				<p>Have a look at some of my projects on the right!</p>
 				
 				<p id = "c_title">Contact Me</p>
