Smoothed transition between pages

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>About Me</title>
+        <link rel="stylesheet" href = "../stylesheet.css">
 		<link rel="stylesheet" href = "stylesheet.css">
 		<meta name="description" content="Zac Nolan - Portfolio containing work experience and contact details"/>
 		<meta name="keywords" content="Zac Nolan, Zac, Nolan, Portfolio"/>
 		<meta name="author" content="Zac Nolan"/>
         <script src="/js/script.js"></script>
+        <script src="script.js"></script>
     </head>
     <body>
         <div id = "menu">
